--- a/help.html
+++ b/help.html
@@ -263,8 +263,8 @@
                 <h3>Frequently Asked Questions (FAQ)</h3>
                 <p>We’ve compiled a list of common questions and answers to help you get the most out of your experience with The Mythicz. Check out the FAQ below for more information:</p>
                 <ul>
-                    <p><a href="#about-us" class="button-link">What is The Mythicz?</a></p>
-                    <p><a href="#community" class="button-link">How do I join the community?</a></p>
+                    <p><a href="about us.html" class="button-link">What is The Mythicz?</a></p>
+                    <p><a href="creativity.html" class="button-link">How do I join the community?</a></p>
                 </ul>
             </div>
             <div class="timeline-event right">
