--- a/creativity.html
+++ b/creativity.html
@@ -257,7 +257,20 @@
             <a href="help.html">Help</a>
         </nav>
     </header>
-
+    
+    <section class="hero">
+        <h1>Immerse yourself in the wonder of The Mythicz.</h1>
+        <p>Explore the vibrant myths of India. Witness reimagined stories of gods, heroes, and legendary figures like never before.</p>
+        <nav>
+            <a href="index.html" class="button-link">Home</a>
+            <a href="about us.html" class="button-link">About</a>
+            <a href="work.html" class="button-link">Our Work</a>
+            <a href="#" class="button-link">Ramayana</a>
+            <a href="creativity.html" class="button-link">Creativity</a>
+            <a href="help.html" class="button-link">Help</a>
+        </nav>
+    </section>
+    
     <section id="creativity">
         <h2>Unleashing Creativity</h2>
         <p>At The Mythicz, creativity is the essence of our journey. From reimagining age-old myths to designing vibrant gaming worlds, every element is infused with boundless imagination. Our team of artists, writers, and developers collaborate to craft experiences that honor tradition while embracing innovation.</p>
