--- a/creativity.html
+++ b/creativity.html
@@ -257,8 +257,7 @@
             <a href="index.html" class="button-link">Home</a>
             <a href="about us.html" class="button-link">About</a>
             <a href="work.html" class="button-link">Our Work</a>
-            <a href="#" class="button-link">Ramayana</a>
-            <a href="creativity.html" class="button-link">Creativity</a>
+            <a href="#creativity" class="button-link">Creativity</a>
             <a href="help.html" class="button-link">Help</a>
         </nav>
     </section>
