--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
         <p>Embark on an epic journey through the myths of India. Discover heroes, gods, and stories reimagined.</p>
         <nav>
             <a href="#about-us" class="button-link">Explore Now</a>
+            <a href="#creativity" class="button-link">Creativity</a>
             <a href="#quotes" class="button-link">Quotes</a>
             <a href="help.html" class="button-link">Help</a>
             <a href="#contact" class="button-link">Contact</a>
